--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
+    "request": "^2.70.0",
     "serve-favicon": "~2.3.0"
   }
 }
