--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "math": "0.0.3",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "request": "^2.70.0",
