--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "googleapis": "^5.2.1",
     "jade": "~1.11.0",
     "math": "0.0.3",
     "morgan": "~1.6.1",
