--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "request": "^2.70.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sparkpost": "^1.3.3"
   }
 }
