--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.0.0-rc.3",
     "body-parser": "~1.13.2",
     "cheerio": "^0.20.0",
     "cookie-parser": "~1.3.5",
