--- a/package.json
+++ b/package.json
@@ -17,8 +17,18 @@
     "math": "0.0.3",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "request": "^2.70.0",
     "serve-favicon": "~2.3.0",
     "sparkpost": "^1.3.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "jsx-loader": "^0.13.2",
+    "webpack": "^1.13.1"
   }
 }
