--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^5.2.1",
     "jade": "~1.11.0",
     "math": "0.0.3",
+    "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
     "node-sass-middleware": "0.8.0",
     "react": "^15.1.0",
